TEST_PROGRAMS/INVALID/chia-wei_liu/invalid5.min
if x then
    while y do
    endif
done
